# Panda-Factory

./: .antigravityignore  .firebaserc  .gitignore  .pandaignore  ANALISE_MERCADO.md  ANALISE_REDUNDANCIA.md  APPS_SCRIPT.md  BACKUP_CONSOLIDACAO.md  BUILD_README.md  CHANGELOG.md  CODEX.md  COMPARACAO_ARQUITETURAS.md  CRM.html  DOCUMENTACAO_MESTRE.md  ESTRATEGIA_AQUISICAO.md  FUTURO_IA.md  IA_AGENTE_AGENTIC.md  INICIAR_SISTEMA.bat  INTEGRACOES.md  Iniciar_CRM.bat  LOCALIZACAO_5_PONTOS.md  NPM_INSTALL_LIST.md  PF_MASTER_ARCHITECTURE.md  PRICING.md  Panda Core.md  PandaFactory.code-workspace  PandaFactory.html  PandaFactory.html.backup  README.md  README_PANDA_OFICIAL.md  README_TECNICO.md  ROADMAP.md  STATUS_CONSOLIDADO.md  VERIFICACAO_MANIFESTO.md  VERIFICACAO_RESTO.md  _build_shell.ps1  _config.yml  appscripttxt.txt  build.js  debug_log.txt  (+16 more)
.agent/: CONTEXT.md  PANDA.md  Untitled-3.txt
.tmp.driveupload/: 75791  75793  75837  75841  75845  75847  75849  75853  75857  75859  75863  75867  75871  75873  75875  75879  75883  75885  75889  75893  75897  75899  75903  75907  75911  75915  75917  75921  75923  75927  75931  75935  75937  75941  75943  75947  75951  75953  75957  75959  (+7489 more)
11.jam/: package-lock.json
11.pf-app/: index.html
12.moltbook/: README_PF_MOLTBOOK.md
3.sdk/: pf.agent-telemetry.js  pf.ai-core.js  pf.app-init.js  pf.components.js  pf.kill-switch.js  pf.loader.js  pf.module-loader.js  pf.sdk.js
4.ui/: Comp_AppDock.html  Comp_DevToolsDock.html  Comp_HeaderStatus.html  Comp_SettingsModal.html  Comp_Sidebar.html  Comp_TreasuryDashboard.html  pf.devtools.js  pf.dock-drag.js  pf.dock.js  pf.modal-pin.js  pf.settings.js
6.integrations/: pf.meta.js  pf.youtube.js
7.7.rust-agent/: Cargo.toml
7.7.rust-agent/src/: ai_router.rs  config.rs  crypto_engine.rs  firebase_bridge.rs  gas_bridge.rs  main.rs  p2p_node.rs  tentacle_sdk.rs
7.rust-agent/: Cargo.toml
8.docs/: NPM_INSTALL_LIST.md  PF_AGENT_CONSTITUTION.md  PF_BACKEND_REFERENCE.md  PF_COLAB_REFERENCE.md  PF_ECONOMY_REFERENCE.md  PF_EDUCATION_REFERENCE.md  PF_FILE_REGISTRY.md  PF_GAS_REFERENCE.md  PF_GEMINI_REFERENCE.md  PF_MASTER_ARCHITECTURE.md  PF_MCP_REFERENCE.md  PF_MEDUSA_REFERENCE.md  PF_MOLTBOOK_REFERENCE.md  PF_OPENSOURCE_CATALOG.md  PF_P2P_REFERENCE.md  PF_PAT_FOUNDER_CONSTITUTION.md  PF_PLUGIN_AND_MODULAR_REFERENCE.md  PF_SDK_REFERENCE.md  PF_SECURITY_REFERENCE.md  PF_SOCIAL_REFERENCE.md  PF_UI_REFERENCE.md  README_PANDA_OFICIAL.md  council_viability_report.md
9.tools/: Iniciar_CRM.bat  add_lang_switcher.py  cleanup_ui.py  debug_log.txt  fix_header.py  fix_omni_bar.py  fix_omni_layout.py  importar_guia_construcao.py  inject_status_monitor.py  organize_relatorio.py  publish-sdk.sh  restore_fab_logic.py
_archive/: Com certeza.md  DOCS_INDEX.md  DOCUMENTACAO_MESTRE.md  ESTRATEGIA_LATAM.md  NPM_INSTALL_LIST.md  PLANO_CONSOLIDACAO.md  README_TECNICO.md
app/: index.html
backend/: AI_Dispatcher.js  Code.gs  Config.js  CryptoService.js  Main.js  MarketplaceService.gs  PaymentService.gs  StripeService.js  WebhookController.js
community/: README.md
components/: Comp_AppDock.html  Comp_DevToolsDock.html  Comp_HeaderStatus.html  Comp_SettingsModal.html  Comp_Sidebar.html  Comp_TreasuryDashboard.html
css/: pf.theme.css
dados/: seed_system.json
data/: manifest.json
docs/: ARCHITECTURE_FIREBASE_RUST.md  AUDITORIA_PRE_LANCAMENTO.md  CODEX.md  CSS_REFERENCE.md  DUAL_REPO_ARCHITECTURE.md  FAQ.md  FEATURES.md  GAMIFICATION_BADGES.md  GOOGLE_WORKSPACE_INTEGRATIONS.md  GUIA_TESTE_PWA.md  LEIA-ME.txt  MANUAL_INFRAESTRUTURA.md  MAPEAMENTO_CODEX.md  PF_AGENT_CONSTITUTION.md  PF_CTRADER_REFERENCE.md  PF_FILE_REGISTRY.md  PF_FINANCIAL_5Y.md  PF_FIREBASE_REFERENCE.md  PF_GAS_REFERENCE.md  PF_GOVERNANCE_REFERENCE.md  PF_HEALTH_STATUS.md  PF_JAM_COMPONENTS.md  PF_MASTER_ARCHITECTURE.md  PF_MEDUSA_REFERENCE.md  PF_MIND_MAPS.md  PF_P2P_REFERENCE.md  PF_PARTNER_REFERENCE.md  PF_PLUGIN_AND_MODULAR_REFERENCE.md  PF_PRICING_REFERENCE.md  PF_RUST_REFERENCE.md  PF_SDK_REFERENCE.md  PF_SOCIAL_REFERENCE.md  PF_TECHS_SDK.md  PF_TOKENOMICS_REFERENCE.md  PF_TRADING_REFERENCE.md  PF_UI_REFERENCE.md  PLUGINS_SDKS.md  README.md  REVISAO_FINAL_100.md  ROADMAP.md  (+6 more)
docs_backup_2026-02-04/: PF_BACKEND_REFERENCE.md  PF_COLAB_REFERENCE.md  PF_CSS_REFERENCE.md  PF_GAS_REFERENCE.md  PF_HTML_REFERENCE.md  PF_JAM_COMPONENTS.md  PF_MCP_REFERENCE.md  PF_MEDUSA_REFERENCE.md  PF_OPENSOURCE_CATALOG.md  (+4 more)
rust-agent/: Cargo.toml
rust-agent/src/: crypto.rs  gpu.rs  health.rs  main.rs  mcp.rs
(+473 files in other folders)
