# ⚠️ PLANNED — Not yet implemented
# Panda Factory Rust Agent v0.1.0 (MOCK)
# Este arquivo é um placeholder para o futuro Rust Agent.
# Status: PLANNED | Target: Phase 2 2026

[package]
name = "panda-factory-agent"
version = "0.1.0"
edition = "2021"
description = "Panda Factory Rust Agent — planned P2P, crypto, AI bridge"
authors = ["Lucas Valério <founder@pandafactory.io>"]

[dependencies]
# TODO: adicionar dependências quando implementado
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1", features = ["derive"] }
# reqwest = { version = "0.11", features = ["json"] }
