[package]
name = "panda-agent"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Valério <lucas@panda.com>"]
description = "Panda Factory Rust Agent - MCP Server + GPU + Polyglot"
license = "MIT"

[dependencies]
# MCP Server
mcp-tools = { version = "0.1", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GPU Detection
nvml-wrapper = { version = "0.9", optional = true }

# WebView (Tauri)
tauri = { version = "2.0", features = [], optional = true }
tauri-build = { version = "2.0", optional = true }

# Ed25519 Crypto
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"

# HTTP Client (for GAS Backend)
reqwest = { version = "0.11", features = ["json"] }

# Polyglot Translation (NLLB)
# candle-core = { version = "0.4", optional = true }
# candle-nn = { version = "0.4", optional = true }
# candle-transformers = { version = "0.4", optional = true }

# Whisper STT
# whisper-rs = { version = "0.8", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["gpu", "crypto"]
gpu = ["nvml-wrapper"]
crypto = []
webview = ["tauri", "tauri-build"]
ai = []
# polyglot = ["candle-core", "candle-nn", "candle-transformers"]
# whisper = ["whisper-rs"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
