[package]
name = "panda-agent"
version = "0.2.0"
edition = "2021"
authors = ["Lucas Valério <lucas@panda.com>"]
description = "Panda Factory Rust Agent - MCP Server + GPU + Full Stack"
license = "MIT"

[dependencies]
# Core Runtime
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MCP Server (Official SDK)
# rmcp = { version = "0.1", optional = true }  # TODO: Check crates.io for available version

# Crypto (CORE - PC Cripto)
ring = "0.17"
ed25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Database Local (CORE - Wallet)
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP/Firebase (CORE)
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"

# GPU
cudarc = { version = "0.12", features = ["cuda-12050"], optional = true }
wgpu = { version = "23", optional = true }

# AI Local (Fallback)
whisper-rs = { version = "0.11", optional = true }
ort = { version = "2.0.0-rc.11", features = ["cuda"], optional = true }
tokenizers = { version = "0.20", optional = true }

# Screen/Hardware
scap = { version = "0.0.8", optional = true }
arboard = { version = "3", optional = true }
global-hotkey = { version = "0.6", optional = true }
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Automation
enigo = { version = "0.2", optional = true }
rdev = { version = "0.5", optional = true }
libloading = "0.8"

# Utilities
keyring = { version = "3", optional = true }
lettre = { version = "0.11", optional = true }
lopdf = { version = "0.32", optional = true }

# Tauri WebView
tauri = { version = "2.0", features = [], optional = true }
tauri-build = { version = "2.0", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["core", "crypto"]
core = []
crypto = []
mcp = []  # TODO: Enable when rmcp is available
gpu = ["cudarc", "wgpu"]
ai = ["whisper-rs", "ort", "tokenizers"]
capture = ["scap", "arboard", "nokhwa"]
automation = ["enigo", "rdev", "global-hotkey"]
utils = ["keyring", "lettre", "lopdf"]
webview = ["tauri", "tauri-build"]
full = ["core", "crypto", "mcp", "gpu", "ai", "capture", "automation", "utils"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

